--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <script src="./creators.js"></script>
-    <script src="./users.js"></script>
-    <script src="./mainScript.js"></script>
+    <script type="module" src="./creators.js"></script>
+    <script type="module" src="./users.js"></script>
+    <script type="module" src="./mainScript.js"></script>
 
 </body>
 
